nullaway_error_B4C57A88-3A10-4DC2-B107-507179F2BE82.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/jmx/export/annotation/AnnotationJmxAttributeSource.java:120: error: [NullAway] dereferenced expression defaultValue is @Nullable
		if (!defaultValue.isEmpty()) {
		                 ^
    (see http://t.uber.com/nullaway )
